feat: html website structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
     <head> 
         <title>Workflow</title>
     </head>
     <body>
-        
+        <header>
+            <h1>Workflow</h1>
+            <p>you completed x out of y tasks</p>
+            <select name="" id="">
+                <option value="">Today</option>
+            </select>
+        </header>
+        <main>
+            <section>
+                <h2>ToDo list</h2>
+                <button>add task</button>
+                <ol>
+                    <li>1 Task</li>
+                    <li>2 Task</li>
+                </ol>
+            </section>
+            <section>
+                <h2>Done</h2>
+                <ul>
+                    <li>3 Task Done</li>
+                    <li>4 Task Done</li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
