feat: add todo tasks

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <h2>ToDo list</h2>
                 <button>add task</button>
                 <ol>
-                    <li>1 Task</li>
-                    <li>2 Task</li>
+                    <li>research for including resscources (Css, Js, etc., Html 5 boilerplate)</li>
+                    <li>research reset/normalize browser styled, differance between reset and normalize! Current solutions(medium, mdn, google developers, etc.)</li>
                 </ol>
             </section>
             <section>
                 <h2>Done</h2>
                 <ul>
-                    <li>3 Task Done</li>
-                    <li>4 Task Done</li>
+                    <li>setup intial markup</li>
+                    <li>learned about semantic</li>
                 </ul>
             </section>
         </main>
