feat: implement normalize.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head> 
         <title>Workflow</title>
+        <link rel="stylesheet" href="styles/normalize.css">
     </head>
     <body>
         <header>
