feat: implement app.css

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
     <head> 
         <title>Workflow</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700" rel="stylesheet">
         <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/app.css">
     </head>
     <body>
-        <header>
+        <header class="header">
             <h1>Workflow</h1>
             <p>you completed x out of y tasks</p>
             <select name="" id="">
                 <option value="">Today</option>
             </select>
         </header>
-        <main>
-            <section>
+        <main class="main">
+            <section class="main__section">
                 <h2>ToDo list</h2>
                 <button>add task</button>
                 <ol>
@@ -21,7 +23,7 @@
                     <li>research reset/normalize browser styled, differance between reset and normalize! Current solutions(medium, mdn, google developers, etc.)</li>
                 </ol>
             </section>
-            <section>
+            <section class="main__section">
                 <h2>Done</h2>
                 <ul>
                     <li>setup intial markup</li>
@@ -29,8 +31,8 @@
                 </ul>
             </section>
         </main>
-        <footer>
-
+        <footer class="footer">
+            this is the footer
         </footer>
     </body>
 </html>
