feat: adjust the todo/done tasks

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 <h2>ToDo list</h2>
                 <button>add task</button>
                 <ol>
-                    <li>research for including resscources (Css, Js, etc., Html 5 boilerplate)</li>
-                    <li>research reset/normalize browser styled, differance between reset and normalize! Current solutions(medium, mdn, google developers, etc.)</li>
+                    <li>css custom properties, css-variablen</li>
+                    <li>Js: dom api, selectoren, node children, parents, etc.</li>
+                    <li>template tag, natives hmtl tag</li>
                 </ol>
             </section>
             <section class="main__section">
@@ -28,6 +29,8 @@
                 <ul>
                     <li>setup intial markup</li>
                     <li>learned about semantic</li>
+                    <li>research for including resscources (Css, Js, etc., Html 5 boilerplate)</li>
+                    <li>research reset/normalize browser styled, differance between reset and normalize! Current solutions(medium, mdn, google developers, etc.)</li>
                 </ul>
             </section>
         </main>
