--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
                 <h2>ToDo list</h2>
                 <button>add task</button>
                 <ol>
-                    <li>css custom properties, css-variablen</li>
-                    <li>Js: dom api, selectoren, node children, parents, etc.</li>
-                    <li>template tag, natives hmtl tag</li>
+                    <li>render left side of ToDo list with js, function? array with content of lis</li>
+                    <li>import node second paramter, meaning</li>
                 </ol>
             </section>
             <section class="main__section">
@@ -31,11 +30,18 @@
                     <li>learned about semantic</li>
                     <li>research for including resscources (Css, Js, etc., Html 5 boilerplate)</li>
                     <li>research reset/normalize browser styled, differance between reset and normalize! Current solutions(medium, mdn, google developers, etc.)</li>
+                    <li>css custom properties, css-variablen</li>
+                    <li>Js: dom api, selectoren, node children, parents, etc.</li>
+                    <li>template tag, natives hmtl tag</li>
                 </ul>
             </section>
         </main>
         <footer class="footer">
             this is the footer
         </footer>
+        <template>
+            <li></li>
+        </template>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
